--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -5,6 +5,9 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-57750605-1', 'auto');
-  ga('send', 'pageview');
+  ga('send', 'pageview', {
+    'page': '{{ page.url }}',
+    'title': '{{ page.title | replace: "'", "\\'" }}'
+  });
 
 </script>
